# regentix

./: .gitignore  Cargo.toml  README.md  config.json  config_metodo.json  deploy_build_rust.sh  deploy_release_rust.sh  package-lock.json
model_ai/: requirements.txt
model_ai/rego_finetuning/: start.sh  start_server.py
model_ai/rego_finetuning/data/: test.jsonl  train.jsonl  valid.jsonl
regentix-frontend/: README.md  angular.json  package-lock.json  package.json
regentix-frontend/src/: index.html  main.ts
regentix-frontend/src/app/: app.config.ts  app.spec.ts  app.ts
regentix-frontend/src/app/rego-table/: rego-table.css  rego-table.html  rego-table.spec.ts  rego-table.ts
src/: main.rs
