[package]
name = "regentix"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
regorus = "0.1" # Interprete Rego nativo in Rust
lazy_static = "1.5"    # Per gestire la memoria statica condivisa.